Modify margin to avoid having too much space

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,111 +1,111 @@
 body {
-  overflow: auto;
+    overflow: auto;
 }
 
 h1 {
-  padding: 25px;
-  margin: 10px;
+    padding: 25px;
+    margin: 10px;
 }
 .animalCardHeader {
-  background-color: hsla(0, 0%, 100%, 0.6);
-  font-size: 0.85rem;
-  color: #000000;
-  padding: 12px;
-  border-radius: 15px;
+    background-color: hsla(0, 0%, 100%, 0.6);
+    font-size: 0.85rem;
+    color: #000000;
+    padding: 12px;
+    border-radius: 15px;
 }
 
 .spinner {
-  width: 3rem;
-  height: 3rem;
-  color: #f28f1d;
+    width: 3rem;
+    height: 3rem;
+    color: #f28f1d;
 }
 
 .loader {
-  position: fixed;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #ffffff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .loader.hidden {
-  animation: fadeOut 1s;
-  animation-fill-mode: forwards;
+    animation: fadeOut 1s;
+    animation-fill-mode: forwards;
 }
 
 @keyframes fadeOut {
-  100% {
-    opacity: 0;
-    visibility: hidden;
-  }
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
 }
 
 .loaderElements {
-  position: fixed;
-  z-index: 2;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: #ffffff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    position: fixed;
+    z-index: 2;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #ffffff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .loaderElements.hidden {
-  animation: fadeOut 1s;
-  animation-fill-mode: forwards;
+    animation: fadeOut 1s;
+    animation-fill-mode: forwards;
 }
 
 @keyframes fadeOut {
-  100% {
-    opacity: 0;
-    visibility: hidden;
-  }
+    100% {
+        opacity: 0;
+        visibility: hidden;
+    }
 }
 
 .navbarBtnMargins {
-  margin: -5px 18px 8px 18px;
+    margin: -5px 18px 8px 18px;
 }
 
 .navbarBtnProfile {
-  margin: 8px 18px 8px 18px;
+    margin: 8px 18px 8px 18px;
 }
 
 .navbarBtnLoginSignup {
-  margin: 10px 18px 5px 18px;
+    margin: 10px 18px 5px 18px;
 }
 
 .navbarBtnFAQ {
-  margin: 5px 0px 8px 8px;
+    margin: 5px 0px 8px 8px;
 }
 
 .navbarBtnFlags {
-  margin-left: 18px;
-  margin-top: -3px;
+    margin-left: 18px;
+    margin-top: -3px;
 }
 
-.popup{
+.popup {
     background-color: rgba(1, 1, 1, 0.5);
     padding: 60px 40px;
     position: absolute;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     left: 50%;
     top: 50%;
     border-radius: 0px;
-    font-family: "Poppins",sans-serif;
+    font-family: 'Poppins', sans-serif;
     display: none;
     text-align: center;
 }
-.popup button{
+.popup button {
     display: block;
-    margin:  50px 0 20px auto;
+    margin: 0.2em 0 20px auto;
     background-color: transparent;
     font-size: 30px;
     color: #ffffff;
@@ -117,10 +117,10 @@ h1 {
     outline: none;
     cursor: pointer;
 }
-.popup h2{
-  margin-top: -20px;
+.popup h2 {
+    margin-top: -20px;
 }
-.popup p{
+.popup p {
     font-size: 14px;
     text-align: justify;
     margin: 25px 0;
